# IBCS-Compliance

./: .gitignore  README.md
app/backend/: .env.example  docker-compose.yml  main.py  pyproject.toml
app/backend/src/api/contracts/: __init__.py  requests.py  responses.py
app/backend/src/api/controllers/: dashboard_controller.py  user_controller.py
app/backend/src/api/controllers/auth/: auth_controller.py
app/backend/src/api/middlewares/: auth.py
app/backend/src/api/router/: routes.py
app/backend/src/api/router/auth/: public_routes.py
app/backend/src/api/router/dashboard/: private_route.py
app/backend/src/api/router/user/: private_route.py
app/backend/src/config/: config.py  db.py  errors.py
app/backend/src/core/models/: dashboard_analysis_model.py  user_model.py
app/backend/src/core/schemas/: User.py
app/backend/src/core/services/: dashboard_service.py  user_service.py
app/backend/src/core/services/auth/: auth_service.py
app/backend/src/dal/interface/: dashboard_interface.py  user_interface.py
app/backend/src/dal/repo/: dashboard_repo.py  user_repo.py
app/backend/src/ml/model/: mock_dashboard_analyzer.py  real_model_analyzer.py
app/backend/src/router/: routes.py
app/backend/src/router/auth/: public_routes.py
app/backend/src/router/user/: private_route.py
app/client/: package.json  pnpm-lock.yaml
app/client/src/: App.tsx  main.tsx
app/client/src/components/dashboard/: AnalysisDetails.tsx
app/client/src/context/: UserContext.tsx
app/client/src/styles/: globals.css
docs/: Project Proposal Jugo v2.docx
(+14 files in other folders)
